--- a/index.html
+++ b/index.html
@@ -9,4 +9,6 @@
     <h1>Hello World!</h1>
     
 </body>
+<!-- branch 1 -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </html>
